Fix studio and outside pages on mobile

--- a/outside-pictures.css
+++ b/outside-pictures.css
@@ -78,18 +78,21 @@ header h1 {
     background-color: #333;
 }
 
+.portfolio-item {
+    display: flex;
+    justify-content: center;
+}
 .portfolio-item img {
-    max-width: 25em;
+    max-width: 90%;
     transition: transform 0.75s ease;
+
 }
 .portfolio-item img:hover {
     transform: scale(1.2);
 }
-
 .container {
     display: flex;
     justify-content: center;
-    margin-left: 2vw;
 }
 
 .footer {
@@ -159,5 +162,8 @@ header h1 {
     }
     .navbar-right li {
         display: block;
+    }
+    .portfolio-item img {
+        max-width: 25em;
     }
 }
